<resources>
    <string name="app_name">Kustaurant</string>

    <!-- TierFragment -->
    <string name="wide_btn_info"><u>크게 보기</u></string>
    <string name="small_btn_info"><u>작게 보기</u></string>
    <string name="restaurant_img_info">식당 대표 이미지 입니다.</string>
    <string name="restaurant_no_partnership_info">제휴 해당사항 없음</string>
    <string name="restaurant_favorite_info">즐겨찾기 아이콘 입니다.</string>
    <string name="restaurant_tier_info">식당 순위 아이콘 입니다.</string>
    <string name="restaurant_evaluation_info">평가가 완료된 아이콘 입니다.</string>
    <string name="tier_info"><u>티어란?</u></string>
    <string name="category_btn_info">음식 카테고리 설정을 위한 아이콘 입니다.</string>
    <string name="back_btn_info">뒤로 가기 버튼입니다.</string>
    <string name="search_btn_info">검색하기 버튼입니다.</string>
    <string name="alarm_btn_info">알람 버튼입니다.</string>
    <string name="expand_reduction_fab_info">음식점 리스트를 작게/크게 볼 수 있는 버튼입니다.</string>
    <string name="fab_expand"><u>크게 보기</u></string>
    <string name="fab_reduce"><u>작게 보기</u></string>
    <string name="tier_location_info"><u>위치에 대한 설명이 필요하다면?</u></string>
    <string name="tier_popup_crown_info">티어란? 팝업에 대한 아이콘입니다.</string>
    <string name="tier_popup_title">티어란?</string>

    <!-- DrawFragment -->
    <string name="draw_selected_restaurant_img_info">랜덤으로 뽑힌 음식점 이미지입니다.</string>
    <string name="draw_random_top_info">랜덤 맛집 뽑기</string>
    <string name="draw_random_detail_info">건국대 주변 맛집을 랜덤으로 뽑아보아요!</string>
    <string name="draw_selected_category_result_clickable_info">사진을 누르면 해당 식당의 정보를 볼 수 있어요!</string>
    <string name="draw_restaurant_star_img_info">식당의 별점 이미지입니다.</string>

    <!-- Community -->
    <string name="community_ranking_info">맛집 평가에 참여하고 랭킹에 올라보세요!</string>
    <string name="community_user_img_info">사용자가 지정한 아이콘입니다.</string>
    <string name="community_post_img_info">사용자가 올린 이미지 입니다.</string>

    <!-- DetailActivity  -->
    <string name="detail_to_naver">네이버 지도로 이동하기</string>
    <string name="detail_tier_info">티어 정보</string>
    <string name="detail_alliance_info">제휴 정보</string>
    <string name="detail_evaluation_count">평가수</string>
    <string name="detail_evaluation_grade">평점</string>
    <string name="detail_menu">메뉴</string>
    <string name="detail_reviwe">리뷰</string>
    <string name="detail_to_evaluate">맛집 평가하기</string>
    <string name="detail_is_open">영업중</string>
    <string name="detail_is_not_open">영업안함</string>

    <!-- EvaluateActivity -->
    <string name="evaluate_select_alone">혼밥</string>
    <string name="evaluate_select_tow_four">2~4인</string>
    <string name="evaluate_select_five">5인 이상</string>
    <string name="evaluate_select_group">단체 회식</string>
    <string name="evaluate_select_delivery">배달</string>
    <string name="evaluate_select_night">야식</string>
    <string name="evaluate_select_invite">친구초대</string>
    <string name="evaluate_select_date">데이트</string>
    <string name="evaluate_select_blind_date">소개팅</string>


    <string name="evaluate_select_keyword">키워드를 선택해주세요</string>
    <string name="evaluate_select_grade">별점을 선택해주세요</string>
    <string name="evaluate_no_select_grade">아직 선택하지 않으셨습니다</string>
    <string name="evaluate_select_grade_10">[선택]10자 이상 입력해주세요</string>
    <string name="evaluate_select_image">+ 이미지 추가(선택)</string>
    <string name="evaluate_submit">평가 제출하기</string>

    <!-- Onboarding -->
    <string name="onboarding_skip"><u>건너뛰기</u></string>
    <string name="onboarding_fragment1">건대생들이 선정한 건대맛집,\n<font color='#43AB38'>티어 시스템</font>으로 빠르게 확인!</string>
    <string name="onboarding_fragment2">신입생도 파악하기 쉽게,\n<font color='#43AB38'>건대생 지도</font>를 통한 맛집 확인!</string>
    <string name="onboarding_fragment3">건국대학교 <font color='#43AB38'>제휴식당</font>을 한눈에!\n티어별로 확인해 보세요</string>
    <string name="onboarding_fragment4">건대생의 메뉴추천,\n<font color='#43AB38'>쿠스토랑 뽑기</font>로 정해 보세요!</string>

    <!-- naver login -->
    <string name="naver_login_client_name">쿠스토랑</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>