<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tier_rv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="7dp"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/restaurantImage"
        android:layout_width="73dp"
        android:layout_height="55dp"
        android:scaleType="centerCrop"
        android:layout_marginEnd="18dp"
        android:src="@drawable/img_default_restaurant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/restaurant_img_info" />

    <ImageView
        android:id="@+id/restaurantTier"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_rank_1"
        app:layout_constraintStart_toStartOf="@id/restaurantImage"
        app:layout_constraintTop_toTopOf="@id/restaurantImage"
        android:contentDescription="@string/restaurant_tier_info" />

    <ImageView
        android:id="@+id/evaluationImg"
        android:layout_width="19dp"
        android:layout_height="19dp"
        android:background="@drawable/square_round_background"
        android:backgroundTint="#01BAA6"
        android:padding="1dp"
        android:layout_marginStart="11dp"
        android:src="@drawable/ic_check"
        app:layout_constraintEnd_toStartOf="@id/favoriteImg"
        app:layout_constraintStart_toEndOf="@id/restaurantName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/restaurantName"
        android:contentDescription="@string/restaurant_evaluation_info" />

    <ImageView
        android:id="@+id/favoriteImg"
        android:layout_width="19dp"
        android:layout_height="19dp"
        android:background="@drawable/square_round_background"
        android:backgroundTint="#FEAF1C"
        android:padding="1dp"
        android:src="@drawable/ic_favorite"
        android:layout_marginStart="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/evaluationImg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/restaurantName"
        android:contentDescription="@string/restaurant_favorite_info" />

    <TextView
        android:id="@+id/restaurantRank"
        android:layout_width="28dp"
        android:layout_height="match_parent"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/restaurantName"
        app:layout_constraintStart_toEndOf="@id/restaurantImage"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/restaurantName"
        tools:text="1"/>

    <TextView
        android:id="@+id/restaurantName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@{restaurant.restaurantName}"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/evaluationImg"
        app:layout_constraintStart_toEndOf="@id/restaurantRank"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:text="식당 이름 입니다."
        android:singleLine="true"
        app:layout_constraintBaseline_toBaselineOf="@id/evaluationImg" />

    <TextView
        android:id="@+id/restaurantCuisine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/restaurantName"
        app:layout_constraintStart_toEndOf="@id/restaurantRank"
        android:text="일식"/>

    <TextView
        android:id="@+id/home_divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/restaurantCuisine"
        app:layout_constraintTop_toTopOf="@id/restaurantCuisine"
        android:text="  ㅣ  "/>

    <TextView
        android:id="@+id/restaurantPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/home_divider"
        app:layout_constraintTop_toTopOf="@id/restaurantCuisine"
        android:text="중문 ~ 어대"/>

</androidx.constraintlayout.widget.ConstraintLayout>


