<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="7dp"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/tier_iv_restaurant_img"
        android:layout_width="73dp"
        android:layout_height="55dp"
        android:scaleType="centerCrop"
        android:paddingEnd="18dp"
        android:src="@drawable/img_default_restaurant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="4dp"
        android:clipToOutline="true"
        android:contentDescription="@string/restaurant_img_info"
        tools:ignore="RtlSymmetry" />


    <ImageView
        android:id="@+id/tier_iv_restaurant_tier_img"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_rank_1"
        app:layout_constraintStart_toStartOf="@id/tier_iv_restaurant_img"
        app:layout_constraintTop_toTopOf="@id/tier_iv_restaurant_img"
        android:contentDescription="@string/restaurant_tier_info" />

    <ImageView
        android:id="@+id/tier_iv_restaurant_evaluation_img"
        android:layout_width="19dp"
        android:layout_height="19dp"
        android:background="@drawable/square_round_background"
        android:backgroundTint="#01BAA6"
        android:padding="1dp"
        android:layout_marginStart="11dp"
        android:src="@drawable/ic_check"
        app:layout_constraintEnd_toStartOf="@id/tier_iv_restaurant_favorite_img"
        app:layout_constraintStart_toEndOf="@id/tier_tv_restaurant_Name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tier_tv_restaurant_Name"
        android:contentDescription="@string/restaurant_evaluation_info" />

    <ImageView
        android:id="@+id/tier_iv_restaurant_favorite_img"
        android:layout_width="19dp"
        android:layout_height="19dp"
        android:background="@drawable/square_round_background"
        android:backgroundTint="#FEAF1C"
        android:padding="1dp"
        android:src="@drawable/ic_favorite"
        android:layout_marginStart="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tier_iv_restaurant_evaluation_img"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tier_tv_restaurant_Name"
        android:contentDescription="@string/restaurant_favorite_info" />

    <TextView
        android:id="@+id/tier_tv_restaurant_Id"
        android:layout_width="28dp"
        android:layout_height="match_parent"
        android:text="@{restaurant.restaurantCnt}"
        android:textColor="@color/signature_2"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/tier_tv_restaurant_Name"
        app:layout_constraintStart_toEndOf="@id/tier_iv_restaurant_img"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tier_tv_restaurant_Name"
        tools:text="1"/>

    <TextView
        android:id="@+id/tier_tv_restaurant_Name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@{restaurant.restaurantName}"
        android:textColor="#000000"
        android:textSize="16sp"
        android:fontFamily="@font/pretendard_medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/tier_iv_restaurant_evaluation_img"
        app:layout_constraintStart_toEndOf="@id/tier_tv_restaurant_Id"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:text="식당 이름 입니다."
        android:singleLine="true"
        app:layout_constraintBaseline_toBaselineOf="@id/tier_iv_restaurant_evaluation_img" />

    <TextView
        android:id="@+id/tier_tv_restaurant_details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@{restaurant.restaurantDetails}"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="12sp"
        android:fontFamily="@font/pretendard_regular"
        app:layout_constraintStart_toEndOf="@id/tier_tv_restaurant_Id"
        app:layout_constraintTop_toBottomOf="@id/tier_tv_restaurant_Name"
        tools:text="일식 | 건입~중문" />

    <!-- Divider Line -->
    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/cement_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@id/tier_iv_restaurant_img"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>


