<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tier_rv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/cement_2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/restaurantImage"
        android:layout_width="73dp"
        android:layout_height="73dp"
        android:scaleType="centerCrop"
        android:layout_marginEnd="18dp"
        android:src="@drawable/img_default_restaurant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/restaurant_img_info"
        app:shapeAppearanceOverlay="@style/RoundedImageView"/>

    <ImageView
        android:id="@+id/restaurantTier"
        android:layout_width="28dp"
        android:layout_height="31dp"
        android:src="@drawable/ic_rank_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/restaurantImage"
        android:contentDescription="@string/restaurant_tier_info" />

    <ImageView
        android:id="@+id/evaluationImg"
        android:layout_width="19dp"
        android:layout_height="19dp"
        android:background="@drawable/square_round_background"
        android:backgroundTint="#01BAA6"
        android:padding="1dp"
        android:src="@drawable/ic_check"
        app:layout_constraintStart_toEndOf="@id/favoriteImg"
        app:layout_constraintBottom_toBottomOf="@id/favoriteImg"
        android:contentDescription="@string/restaurant_evaluation_info" />

    <ImageView
        android:id="@+id/favoriteImg"
        android:layout_width="19dp"
        android:layout_height="19dp"
        android:background="@drawable/square_round_background"
        android:backgroundTint="#FEAF1C"
        android:padding="1dp"
        android:src="@drawable/ic_favorite"
        app:layout_constraintStart_toStartOf="@id/restaurantImage"
        app:layout_constraintBottom_toBottomOf="@id/restaurantImage"
        android:contentDescription="@string/restaurant_favorite_info" />

    <TextView
        android:id="@+id/restaurantName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@{restaurant.restaurantName}"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/restaurantImage"
        app:layout_constraintTop_toTopOf="@id/restaurantImage"
        android:layout_marginTop="6dp"
        android:layout_marginStart="23dp"
        tools:text="식당 이름 입니다."
        android:singleLine="true" />

    <TextView
        android:id="@+id/restaurantCuisine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/restaurantName"
        app:layout_constraintStart_toStartOf="@id/restaurantName"
        android:text="일식"/>

    <TextView
        android:id="@+id/restaurant_divider1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/restaurantCuisine"
        app:layout_constraintTop_toTopOf="@id/restaurantCuisine"
        android:text="  ㅣ  "/>

    <TextView
        android:id="@+id/restaurantPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/restaurant_divider1"
        app:layout_constraintTop_toTopOf="@id/restaurantCuisine"
        android:text="중문 ~ 어대"/>

    <TextView
        android:id="@+id/restaurant_divider2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/restaurantPosition"
        app:layout_constraintTop_toTopOf="@id/restaurantCuisine"
        android:text="  ㅣ  "/>

    <TextView
        android:id="@+id/restaurantQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/restaurant_divider2"
        app:layout_constraintTop_toTopOf="@id/restaurantCuisine"
        android:text="혼밥"/>

    <TextView
        android:id="@+id/restaurantPartnershipInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/restaurantName"
        app:layout_constraintBottom_toBottomOf="@id/restaurantTier"
        android:text="제휴 해당사항 없음"/>

</androidx.constraintlayout.widget.ConstraintLayout>