<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.kust.kustaurant.presentation.ui.tier.TierViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.draw.DrawFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--  GuideLine 생성-->
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/draw_gl_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/draw_gl_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95"/>


            <!-- Top Bar -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/draw_top_bar"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:paddingTop="5dp"
                app:layout_constraintDimensionRatio="360:60"
                app:layout_constraintEnd_toEndOf="@id/draw_gl_end"
                app:layout_constraintStart_toStartOf="@id/draw_gl_start"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pretendard_semibold"
                    android:text="@string/draw_random_top_info"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/btn_alarm"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="4dp"
                    android:src="@drawable/ic_alarm"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/alarm_btn_info" />

                <ImageView
                    android:id="@+id/btn_search"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_search"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_alarm"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/search_btn_info" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Container for fragment replacement -->
            <FrameLayout
                android:id="@+id/draw_fragment_container"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/draw_top_bar">
            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>